align profile center

--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,9 @@ button:focus {
   .home_banner_area .banner_inner {
     width: 100%; }
     .home_banner_area .banner_inner .home_left_img {
-      padding-top: 195px; }
+      padding-top: 195px;
+      display: flex;
+      justify-content: center; }
     .home_banner_area .banner_inner .col-lg-6 {
       vertical-align: middle;
       align-self: center; }
