--- a/scss/breadcrumb.scss
+++ b/scss/breadcrumb.scss
@@ -8,6 +8,8 @@
 		width: 100%;
 		.home_left_img{
 			padding-top: 195px;
+			display: flex;
+			justify-content: center;
 		}
 		.col-lg-6{
 			vertical-align: middle;
